# qgi_lab_hmarl

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESEARCH_REPORT.md  colab_full_experiment_hmarl_maritime.ipynb  colab_mvp_hmarl_maritime.ipynb  colab_pro_full_suite.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: agent_ablation.yaml  baseline.yaml  congestion_sweep.yaml  flat_mappo.yaml  latency_sweep.yaml  multi_seed.yaml  no_sharing_ablation.yaml  production.yaml  weather_curriculum.yaml
docs/: README.md
hmarl_mvp/: __init__.py  agents.py  analysis.py  buffer.py  checkpointing.py  config.py  curriculum.py  dynamics.py  env.py  experiment.py  experiment_config.py  forecasts.py  gym_wrapper.py  learned_forecaster.py  logger.py  mappo.py  message_bus.py  metrics.py  multi_coordinator.py  networks.py  pbt.py  plotting.py  policies.py  report.py  rewards.py  scheduling.py  state.py  stats.py
notebooks/: mvp_congestion_marl.ipynb
scripts/: build_google_slides_pdf_preview.py  build_google_slides_pptx.py  compare_baselines.py  compare_weather.py  diagnose_dispatch.py  full_training_200.py  generate_paper_figures.py  quick_diagnostic.py  run_arch_benchmark.py  run_baselines.py  run_demo.py  run_experiment.py  run_final_local_plan.py  run_mappo.py  run_pbt.py  run_pbt_comparison.py  run_production.py  train_forecaster.py  train_mappo.py
tests/: test_action_masking.py  test_agent_policy_forecaster.py  test_arch_scaffolding.py  test_audit_fixes.py  test_buffer.py  test_components.py  test_config_schema.py  test_coverage_gaps.py  test_coverage_gaps_v2.py  test_mappo.py  (+35 more)
(+51 files in other folders)
