[project]
name = "hmarl-mvp"
version = "0.1.0"
description = "Hierarchical Multi-Agent Reinforcement Learning for Maritime Vessel Scheduling"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "QGI Lab", email = "qgi-lab@example.com"},
]
keywords = ["multi-agent", "reinforcement-learning", "maritime", "scheduling", "MAPPO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.8,<4.0",
    "torch>=2.0",
    "gymnasium>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/zhongnz/qgi_lab_hmarl"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["runs", "*.ipynb"]

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
files = ["hmarl_mvp", "scripts", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
